Readme file updated

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -66,6 +66,6 @@
     <div class="score-page__restart">
       <button class="score-page__restart__button">Restart</button>
     </div>
-    <script src="js/tetris_frontend.ts" type="module"></script>
+    <script src="ts/tetris_frontend.ts" type="module"></script>
   </body>
 </html>
